--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "image-viewer",
-  "version": "0.1.1",
+  "version": "0.1.6",
   "private": true,
+  "author": "MysticLorrow",
+  "description": "A special tool to view images.",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "electron:buildWin": "vue-cli-service electron:build --win"
   },
   "dependencies": {
     "lg-thumbnail.js": "^1.1.0",
