--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "lg-thumbnail.js": "^1.1.0",
     "lightgallery.js": "^1.1.2",
+    "request": "^2.88.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
